--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -26,11 +26,13 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/microservices": "^11.1.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.8",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
